Switch to isomorphic-fetch

--- a/package.json
+++ b/package.json
@@ -63,9 +63,9 @@
   "dependencies": {
     "core-js": "^1.0.0",
     "loose-envify": "^1.0.0",
+    "isomorphic-fetch": "^2.1.1",
     "promise": "^7.0.3",
-    "ua-parser-js": "^0.7.9",
-    "whatwg-fetch": "^0.9.0"
+    "ua-parser-js": "^0.7.9"
   },
   "devEngines": {
     "node": ">=3",
