--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "object-assign": "^4.0.1",
     "run-sequence": "^1.1.0"
   },
+  "browser": {
+    "promise": "promise/setimmediate"
+  },
   "files": [
     "LICENSE",
     "PATENTS",
